bindings/encryption_stubs.h

/* Generated by polyglot-ffi */
/* encryption_stubs.h */

#ifndef ENCRYPTION_STUBS_H
#define ENCRYPTION_STUBS_H

char* ml_encrypt(char* arg0);
char* ml_decrypt(char* arg0);
char* ml_hash(char* arg0);
int ml_validate(char* arg0, char* arg1);

#endif /* ENCRYPTION_STUBS_H */